--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -1,24 +1,5 @@
 body {
-  font-family: "Montserrat", sans-serif;
   background-color: #6096ff;
-}
-header {
-  display: flex;
-  padding: 0px 20px;
-  background-color: #778399;
-  font-weight: 500;
-  font-size: 26px;
-}
-.logo {
-  display: flex;
-  align-items: center;
-}
-.logo-image {
-  display: block;
-  background-image: url("../img/diploma-svgrepo-com.svg");
-  background-size: cover;
-  width: 80px;
-  height: 80px;
 }
 .wallet {
   display: flex;
@@ -34,17 +15,21 @@ header {
   width: 300px;
   margin: 0 auto;
 }
-.actions {
-  display: flex;
-  justify-content: space-around;
-  margin: 50px 50px;
+.title {
+  text-align: center;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
-
-.actions a {
-  font-weight: 500;
-  padding: 20px;
-  background-color: #c4c4c4;
-  border-radius: 10px;
-  color: #000000;
-  text-decoration: none;
+.inquirediploma-input {
+  max-width: 400px;
+}
+.center {
+  display: flex;
+  justify-content: center;
+}
+.adddiploma-form {
+  max-width: 700px;
+}
+.adddiploma-input {
+  width: 500px;
 }
