--- a/templates/auth.html
+++ b/templates/auth.html
@@ -15,8 +15,7 @@
 </head>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-    crossorigin="anonymous"></script>
-<script>
+    crossorigin="anonymous">
 </script>
 
 <body>
@@ -41,11 +40,28 @@
     </div>
     <section class="mb-5">
         <div class="container">
-            <div class="d-grid gap-2 col-6 mx-auto">
-                <a class="btn btn-dark btn-lg" href="{{url_for('add_vote')}}">Добавить голосование</a>
-                <a class="btn btn-dark btn-lg" href="{{url_for('add_member')}}">Добавить члена комиссии</a>
-                <a class="btn btn-dark btn-lg" href="{{url_for('get_izbir', vote=vote)}}">Список избирателей</a>
-                <a class="btn btn-dark btn-lg" href="{{url_for('golosovanie', vote=vote)}}">Результаты</a>
+            <div class="title">
+                <h1>Авторизация</h1>
+            </div>
+            <div class="center mt-5">
+                <form class="center-margin" method="post" action="/">
+                    <div class="form-floating mb-3 adddiploma-input">
+                        <input type="text" name="name" class="form-control" id="floatingInput"
+                            placeholder="name@example.com">
+                        <label for="floatingInput">Адрес кошелька</label>
+                    </div>
+                    <div class="form-floating mb-3">
+                        <input type="text" name="vote" class="form-control" id="floatingVote"
+                            placeholder="name@example.com">
+                        <label for="floatingInput">Голосование</label>
+                    </div>
+                    <div class="form-floating mb-3">
+                        <input type="password" name="psw" class="form-control" id="floatingPassword"
+                            placeholder="Password">
+                        <label for="floatingInput">Пароль</label>
+                    </div>
+                    <button type="submit" class="btn btn-primary mt-3">Войти</button>
+                </form>
             </div>
         </div>
     </section>
